--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~49.0.8",
+    "expo-checkbox": "~2.4.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.2",
-    "expo-checkbox": "~2.4.0"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
